# MintVPN

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
.github/workflows/: android.yml  build.yml  mark-android-prerelease.yml  pages.yml
docs/: _config.yml  index.md  privacy.md
scripts/: build-libbox.sh
src/: App.tsx  index.css  main.tsx  theme.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  windows-app-manifest.xml
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  commands.rs  killswitch.rs  lib.rs  main.rs  platform.rs  singbox.rs  sysapps.rs  sysproxy.rs
src/components/: AddServerDialog.tsx  AppBackground.tsx  ConfirmDialog.tsx  ConnectButton.tsx  CreateFolderDialog.tsx  Dashboard.tsx  Dropdown.tsx  EditDetailsDialog.tsx  EmptyServersCard.tsx  Flag.tsx  Logs.tsx  MobileNav.tsx  MultiHopCard.tsx  Profiles.tsx  QuotaCard.tsx  ServersList.tsx  Settings.tsx  Sidebar.tsx  StatsCards.tsx  TitleBar.tsx  Tunneling.tsx  WorldMap.tsx
src/engine/: clashApi.ts  configBuilder.ts  dnsProbe.ts  engine.ts  uriParser.ts
src/store/: connection.ts  folders.ts  logs.ts  multihop.ts  servers.ts  settings.ts  subscriptions.ts  tunneling.ts
src/utils/: androidUpdater.ts  appBrand.ts  exeIcons.ts  mapPool.ts  notify.ts  ping.ts  platform.ts  refreshSubscription.ts  sortByPing.ts  uri.ts  useIsMobile.ts  vpn.ts
tauri-plugin-mintvpn/: Cargo.toml  build.rs
tauri-plugin-mintvpn/android/: .gitignore  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
tauri-plugin-mintvpn/android/libs/: .gitkeep
tauri-plugin-mintvpn/android/src/main/: AndroidManifest.xml
tauri-plugin-mintvpn/android/src/main/java/com/mint/vpn/: MintPlatformInterface.kt  MintVpnPlugin.kt  MintVpnService.kt  ServiceNotification.kt
tauri-plugin-mintvpn/android/src/main/res/drawable/: ic_mint_vpn.xml
tauri-plugin-mintvpn/permissions/: default.toml
tauri-plugin-mintvpn/permissions/autogenerated/: reference.md
tauri-plugin-mintvpn/permissions/autogenerated/commands/: vpn_status.toml
tauri-plugin-mintvpn/src/: error.rs  lib.rs  mobile.rs  models.rs
