[package]
name = "mint"
version = "0.3.34"
description = "Mint VPN — premium desktop client"
authors = ["M1ntVPN"]
license = "MIT"
repository = "https://github.com/M1ntVPN/MintVPN"
homepage = "https://github.com/M1ntVPN/MintVPN"
edition = "2021"

[lib]
name = "mint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon is gated to desktop via tauri's own cfg(desktop) — leaving it
# in the base feature list is fine because the cargo metadata that
# tauri-build's permission resolver walks needs to see every plugin
# referenced from the desktop capability file.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
# Native clipboard access without browser permission prompts — the
# web-API navigator.clipboard.readText() pops a consent dialog inside
# the Tauri webview on Windows, which is jarring UX.
tauri-plugin-clipboard-manager = "2"
# Native OS notifications (connect/disconnect/errors). User can opt out
# in Settings; the toggle is checked JS-side before posting.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "process", "io-util"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }

# NOTE: cargo's dependency resolver doesn't know about cfg(desktop)
# (which is set by tauri-build at compile-time, after metadata resolution),
# so target-gating with cfg(desktop) breaks the build script's permission
# resolver: it walks cargo metadata and can't find plugins listed under
# [target.'cfg(desktop)'.dependencies]. Use explicit target_os predicates
# for desktop-only crates instead.
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
# Launch-on-login. We don't actually use the plugin's `set_activation_policy`
# path; the `enable()` / `disable()` commands handle the Windows registry
# Run key + Linux .desktop autostart + macOS LaunchAgents for us.
tauri-plugin-autostart = "2"
# Updater is desktop-only — Play Store ships its own update channel.
tauri-plugin-updater = "2"

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
# Routes deep-link invocations from a second `Mint.exe mint://...` launch
# back into the already-running instance (Windows ships no native handler
# for this, and Linux desktop entries call out to xdg-open).
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# Mint's own Android plugin: drives `VpnService` + sing-box (libbox) so
# the connect button works the same way it does on the desktop sidecar
# build. The plugin is a no-op on iOS today (no Mint iOS target yet),
# but the cfg gate keeps it mobile-only so the desktop crate graph
# stays untouched.
tauri-plugin-mintvpn = { path = "../tauri-plugin-mintvpn" }

[target.'cfg(unix)'.dependencies]
# geteuid() for the "user-owned process" filter (Linux: compare
# /proc/<pid>/status UID against our own; macOS: compare `ps -o user=`
# against `$USER`) and for `is_elevated`'s root check on every Unix
# target. Pure FFI, no extra system deps.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# WinINet for WinHttpSetOption / IE proxy options + winreg for HKCU edits.
# Both are tiny, no MSVC redist tail.
winreg = "0.52"
# Used for SetClassLongPtrW / DestroyIcon when swapping the live taskbar
# icon at runtime — Tauri's set_icon only updates ICON_BIG / ICON_SMALL
# via WM_SETICON, which is not picked up by the Windows taskbar grouping.
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
