[package]
name = "tauri-plugin-mintvpn"
version = "0.2.8"
description = "Mint VPN — Android VpnService bridge (sing-box / libbox)"
authors = ["M1ntVPN"]
license = "MIT"
edition = "2021"
links = "tauri-plugin-mintvpn"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
